@startuml
class  Curso{
    id: int
    Nome : String
    NumCreditos : int
    Disciplinas: List<Disciplina>
    getDisciplinasPorPeriodo(periodo: int): List<Disciplina>
}
class  Aluno{
    id: int
    nome: String
    Curso : Curso
    Periodo:int 
    Matricula:Matricula

}
class  Turma{
    id: int
    Alunos: List<Aluno>
    Professor:Professor
    adcionarAluno(Aluno aluno):void
    removerAluno(Aluno aluno):void
    Período: int

}
class  Secretaria
{  
     nome: String
     id: int
}
class  Professor
{  
      id: int
    nome: String
    Turmas: List<Disciplina>
    visualizarDisciplinas() : List<String>
    visualizarAlunosNaDisciplina(disciplinaId: int) : List<String>
    addDisciplina(d: Disciplina): void
    

}
class  Disciplina{
    Nome: String
    id: int
    Turmas: List<Turma>
    Periodo: int
}
class Matricula{
    
    Turmas: List<Turma>
    addTurma(Turma turma):void
    PodeSeMatricular(Turma turma):boolean
    
}

abstract class Usuario{
    Nome: String
    Id: int
}

Turma "1" -- "1"Disciplina
Professor "1"-- "0..*" Turma
Matricula "1" -- "1" Aluno
Turma "1" *-- "0..*"Aluno
Curso "1"-- "0..*"Disciplina
Usuario <|-- Aluno
Usuario <|-- Professor
Usuario <|-- Secretaria
Turma "0..*" -- "0..*"Matricula
Aluno "0..*"--"1"Curso

@enduml